[gd_scene load_steps=6 format=3 uid="uid://da1y6457akk57"]

[ext_resource type="Texture2D" uid="uid://djqljxeuoxj3m" path="res://assets/temp/bubble.png" id="1_74ik8"]
[ext_resource type="Script" path="res://scripts/bubble.gd" id="1_d4vj7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dh2yb"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_i7meq"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_odgtg"]
radius = 100.0

[node name="bubble" type="CharacterBody2D"]
script = ExtResource("1_d4vj7")

[node name="bubbleCol" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dh2yb")

[node name="bubbleSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_74ik8")

[node name="bubbleHurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 24

[node name="bubbleHurtCol" type="CollisionShape2D" parent="bubbleHurtBox"]
shape = SubResource("CircleShape2D_i7meq")

[node name="bubbleCollectBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="bubbleCollectCol" type="CollisionShape2D" parent="bubbleCollectBox"]
shape = SubResource("CircleShape2D_odgtg")
